# app

./: .editorconfig  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  TODO.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/workflows/: ci.yml  release.yml
src/: README.md  package.json  svelte.config.js  vite.config.ts
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/src/: lib.rs  main.rs
